syntax = "proto3";

option csharp_namespace = "phoenix";
option go_package = "./models";

package phoenix;

message GetGroupSecretAndCountryCodeRequest{
  int32 groupId = 1;
}

message GetGroupSecretAndCountryCodeResponse{
  bool isSuccess = 1;
  string secretCode = 2;
  string countryCode = 3;
}